trunk/Archive2/d1/459ca68f95a050/output
main.cpp: In function ‘int main()’:
main.cpp:13:35: error: cannot dynamic_cast ‘3.1400000000000001e+0’ (of type ‘double’) to type ‘int’ (target is not pointer or reference)
     int n = dynamic_cast<int>(3.14); 
                                   ^
main.cpp:21:8: warning: unused variable ‘another_d’ [-Wunused-variable]
     D& another_d = static_cast<D&>(br); // downcast
        ^
main.cpp:35:8: warning: unused variable ‘dp’ [-Wunused-variable]
     B* dp = reinterpret_cast<B*>(a);
        ^
main.cpp:43:8: warning: unused variable ‘eu’ [-Wunused-variable]
     EU eu = static_cast<EU>(e2);
        ^
main.cpp:50:23: warning: unused variable ‘p’ [-Wunused-variable]
     std::vector<int>* p = static_cast<std::vector<int>*>(voidp);
                       ^
